package messages;

option java_package = "netmsg";

import "game.proto";
import "management.proto";
import "base.proto";

message FromClient {
  optional ProtoVersionCheck.FromClient proto_version_check = 1;

  optional game.FromClient game = 2;
  optional management.FromClient management = 3;
  optional TimeSync.FromClient time_sync = 4;
}

message FromServer {
  optional ProtoVersionCheck.FromServer proto_version_check = 1;

  optional game.FromServer game = 2;
  optional management.FromServer management = 3;
  optional TimeSync.FromServer time_sync = 4;
}

message ProtoVersionCheck {
  message FromClient {}

  message FromServer {
    required string checksum = 1;
  }
}

message TimeSync {
  message FromClient {
    required base.Timestamp now = 1;
  }
  message FromServer {
    required base.Timestamp client_now = 1;
    required base.Timestamp server_now = 2;
  }
}
